Update issue templates

--- a/.github/ISSUE_TEMPLATE/------------.md
+++ b/.github/ISSUE_TEMPLATE/------------.md
@@ -1,16 +1,26 @@
 ---
-name: "\U0001F468‍\U0001F527 제안드려요."
-about: 더욱 좋은 강의를 위해 새로운 제안을 드려요.
-title: "[fix]"
+name: "\U0001F64B‍♀️ 질문있어요."
+about: 강의 내용에 대한 질문을 편하게 올려주세요.
+title: "[Question]"
 labels: ''
 assignees: pai-sy
 
 ---
 
-**어떤 점이 불편하셨나요?**
+**몇주차 강의의 내용인가요?**	
 
-**어떤 점이 만족스러우셨나요?**
 
-**어떻게 개선하면 좋을까요?**
+**어떤 코드를 작성하고 계셨나요?**	
+스크린샷을 올려주세요:	
 
-감사합니다 !
+
+**어떤 오류가 발생했나요?**	
+스크린샷을 올려주세요:	
+
+
+**추가사항**	
+스크린샷을 올려주세요:	
+
+**개발 환경을 알려주세요:**	
+ - OS: [e.g. iOS]	
+ - 패키지 버젼: [e.g. python3.7]
